@startuml libfilesync-class

title libfilesync Class Diagram

package "Facade" {
    class FileSync
}

package "Utility" {
    abstract class Subject
    abstract class Observer
    class "Logger<static>" as logger
    class TimeFormat
}

package "High level" {
    abstract FileSyncer
    interface ProtocolClient
    abstract class Entry
}

package "x" {
    class Directory
    class File
    class "FileSyncer<concrete>" as concreteFileSyncer
    class "ProtocolClient<concrete>" as concreteProtocolClient    
}

package "Low level" as lowLevel {
    class CurlProtocolClient
    class "CurlProtocolClient<concrete>" as concreteCurlProtocolClient
    class CurlEasyClient
    interface CurlOption
}

package "External" {
    class libcurl
}

FileSync o-- "1" FileSyncer
FileSync o-- "1" Entry
FileSync o-- "1" ProtocolClient

FileSyncer o-- "1" Entry
FileSyncer o-- "1" ProtocolClient

Subject <|-- Entry
FileSyncer --|> Observer
Observer "*" -o Subject

ProtocolClient <|-- concreteProtocolClient
FileSyncer <|-- concreteFileSyncer
Entry <|-- Directory
Entry <|-- File
Entry "*" --o Directory

concreteProtocolClient --> concreteCurlProtocolClient
concreteCurlProtocolClient -|> CurlProtocolClient
CurlProtocolClient --o "1" CurlEasyClient
CurlProtocolClient -> "*" CurlOption
CurlOption --o "1" CurlEasyClient

CurlEasyClient --> libcurl


@enduml